--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -29,6 +29,9 @@
                     <li ui-sref-active="active">
                         <a ui-sref="carts"><i class="fa fa-lemon-o"></i> Carts</a>
                     </li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="orders"><i class="fa fa-lemon-o"></i> Orders</a>
+                    </li>
                 </ul>
             </div>
         </nav>
