--- a/public/partials/orders.html
+++ b/public/partials/orders.html
@@ -8,11 +8,11 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Users
+                            Orders
                         </h1>
                         <ol class="breadcrumb">
                             <li class="active">
-                                <i class="fa fa-university"></i> Users
+                                <i class="fa fa-university"></i> Orders
                             </li>
                         </ol>
                     </div>
@@ -27,8 +27,8 @@
                                         <i class="fa fa-home fa-5x"></i>
                                     </div>
                                     <div class="col-xs-9 text-right">
-                                        <div class="huge">{{usersList.length}}</div>
-                                        <div>Users</div>
+                                        <div class="huge">{{ordersList.length}}</div>
+                                        <div>Orders</div>
                                     </div>
                                 </div>
                             </div>
@@ -42,32 +42,24 @@
                     <div class="col-lg-12">
                         <div class="panel panel-green">
                             <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Users List</h3>
+                                <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Orders List</h3>
                             </div>
                             <div class="table-responsive">
                             <table class="table table-bordegreen table-hover table-striped">
                                 <thead>
                                     <tr>
                                         <th>No.</th>
-                                        <th>Picture</th>
-                                        <th>firstname</th>
-                                        <th>lastname</th>
-                                        <th>email</th>
-                                        <th>username</th>
-                                        <th>admin</th>
-                                        <th></th>
+                                        <th>Items</th>
+                                        <th>Total</th>
+                                        <th>Dated Created</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr ng-repeat="fruit in usersList track by $index">
+                                    <tr ng-repeat="order in ordersList track by $index">
                                         <td>{{$index+1}}</td>                                     
-                                        <td ui-sref="fruit-detail({fruitid: fruit._id})"><img ng-src="{{fruit.photo}}" alt=""></td>
-                                        <td>{{fruit.firstname}}</td>
-                                        <td>{{fruit.lastname}}</td>
-                                        <td>{{fruit.email}}</td>
-                                        <td>{{fruit.username}}</td>
-                                        <td>{{fruit.admin}}</td>
-                                        <td><button ng-click="deleteThisUser(fruit.username)">DELETE</button></td>
+                                        <td>{{order.items}}</td>
+                                        <td>{{order.total}}</td>
+                                        <td>{{order.createdAt}}</td>
                                     </tr>
                                 </tbody>
                             </table>
