--- a/public/partials/products.html
+++ b/public/partials/products.html
@@ -1,86 +1,86 @@
-<div id="wrapper">        
+<div id="wrapper">
 
-        <div id="page-wrapper">
+    <div id="page-wrapper">
 
-            <div class="container-fluid">
+        <div class="container-fluid">
 
-                <!-- Page Heading -->
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h1 class="page-header">
-                            Products
-                        </h1>
-                        <ol class="breadcrumb">
-                            <li class="active">
-                                <i class="fa fa-university"></i> Products
-                            </li>
-                        </ol>
-                    </div>
+            <!-- Page Heading -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">
+                        Products
+                    </h1>
+                    <ol class="breadcrumb">
+                        <li class="active">
+                            <i class="fa fa-university"></i> Products
+                        </li>
+                    </ol>
                 </div>
+            </div>
 
-                <div class="row">
-                    <div class="col-lg-3 col-md-6">
-                        <div class="panel panel-green">
-                            <div class="panel-heading">
-                                <div class="row">
-                                    <div class="col-xs-3">
-                                        <i class="fa fa-home fa-5x"></i>
-                                    </div>
-                                    <div class="col-xs-9 text-right">
-                                        <div class="huge">{{fruitsList.length}}</div>
-                                        <div>Products</div>
-                                    </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="panel panel-green">
+                        <div class="panel-heading">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <i class="fa fa-home fa-5x"></i>
+                                </div>
+                                <div class="col-xs-9 text-right">
+                                    <div class="huge">{{fruitsList.length}}</div>
+                                    <div>Products</div>
                                 </div>
                             </div>
-                        </div>
-                    </div>
-
-                </div>
-                <!-- /.row -->
-
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="panel panel-green">
-                            <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Products List</h3>
-                            </div>
-                            <div class="table-responsive">
-                            <table class="table table-bordegreen table-hover table-striped">
-                                <thead>
-                                    <tr>
-                                        <th>No.</th>
-                                        <th>Picture</th>
-                                        <th>Type</th>
-                                        <th>Price</th>
-                                        <th>Quantity</th>
-                                        <th>Season</th>
-                                        <th>Unit</th>
-                                        <th></th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr ng-repeat="fruit in fruitsList track by $index">
-                                        <td>{{$index+1}}</td>                                     
-                                        <td ui-sref="fruit-detail({fruitid: fruit._id})"><img ng-src="{{fruit.photo}}" alt=""></td>
-                                        <td>{{fruit.type}}</td>
-                                        <td>${{fruit.price | number : 2}}</td>
-                                        <td>{{fruit.quantity}}</td>
-                                        <td>{{fruit.season}}</td>
-                                        <td>{{fruit.unit}}</td>
-                                        <td><button ng-click="deleteThisFruit(fruit._id)">DELETE</button></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
                         </div>
                     </div>
                 </div>
 
             </div>
-            <!-- /.container-fluid -->
+            <!-- /.row -->
+
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="panel panel-green">
+                        <div class="panel-heading">
+                            <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Products List</h3>
+                        </div>
+                        <div class="table-responsive">
+                            <table class="table table-bordegreen table-hover table-striped">
+                                <thead>
+                                <tr>
+                                    <th>No.</th>
+                                    <th>Picture</th>
+                                    <th>Type</th>
+                                    <th>Price</th>
+                                    <th>Quantity</th>
+                                    <th>Season</th>
+                                    <th>Unit</th>
+                                    <th ng-if="isAdmin == true"></th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr ng-repeat="fruit in fruitsList track by $index">
+                                    <td>{{$index+1}}</td>
+                                    <td ui-sref="fruit-detail({fruitid: fruit._id})"><img ng-src="{{fruit.photo}}" alt=""></td>
+                                    <td>{{fruit.type}}</td>
+                                    <td>${{fruit.price | number : 2}}</td>
+                                    <td>{{fruit.quantity}}</td>
+                                    <td>{{fruit.season}}</td>
+                                    <td>{{fruit.unit}}</td>
+                                    <td ng-if="isAdmin == true"><button ng-click="deleteThisFruit(fruit._id)">DELETE</button></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
-        <!-- /#page-wrapper -->
+        <!-- /.container-fluid -->
+
+    </div>
+    <!-- /#page-wrapper -->
 
 </div>
 <!-- /#wrapper -->
