--- a/public/partials/store-detail.html
+++ b/public/partials/store-detail.html
@@ -1,116 +1,116 @@
 <div id="wrapper">
 
-        <div id="page-wrapper">
-            <div class="container-fluid">
-                
-                <div class="table-responsive" ng-if="editMode">
-                    <table class="table table-bordered table-hover table-striped">
-                        <thead>
+    <div id="page-wrapper">
+        <div class="container-fluid">
 
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Name</td>                                   
-                                <td><input type="text" class="form-control" ng-init ="modStoreObj.name = storeDetail.store.name" ng-model="modStoreObj.name"></td>
-                            </tr>
-                            <tr>
-                                <td>Address</td>                                   
-                                <td><input type="text" class="form-control"></td>                                   
-                            </tr>
-                            <tr>
-                                <td>Store Photo</td>{{modStoreObj.store.photo}}                                   
-                                <td><input type="text" class="form-control" ng-init ="modStoreObj.photo = storeDetail.store.photo" ng-model="modStoreObj.photo"></td>                                   
-                            </tr>                                      
-                        </tbody>                                    
-                    </table>
-                    <button type="button" class="btn btn-primary btn-block" style="margin-top: 20px;" ng-click="modCurrentStore()">Submit</button>
-                    <button type="button" ng-click="toggleEdit()">BACK</button>
+            <div class="table-responsive" ng-if="editMode">
+                <table class="table table-bordered table-hover table-striped">
+                    <thead>
+
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Name</td>
+                        <td><input type="text" class="form-control" ng-init ="modStoreObj.name = storeDetail.name" ng-model="modStoreObj.name"></td>
+                    </tr>
+                    <tr>
+                        <td>Address</td>
+                        <td><input type="text" class="form-control"></td>
+                    </tr>
+                    <tr>
+                        <td>Store Photo</td>{{modStoreObj.photo}}
+                        <td><input type="text" class="form-control" ng-init ="modStoreObj.photo = storeDetail.photo" ng-model="modStoreObj.photo"></td>
+                    </tr>
+                    </tbody>
+                </table>
+                <button type="button" class="btn btn-primary btn-block" style="margin-top: 20px;" ng-click="modCurrentStore()">Submit</button>
+                <button type="button" ng-click="toggleEdit()">BACK</button>
+            </div>
+
+            <div class="row store_detail" ng-if="!editMode">
+                <label class="store_det_name">
+                    {{storeDetail.name}}</br> <button type="button" ng-click="toggleEdit()">EDIT</button>
+                    {{storeDetail.address.city}},{{storeDetail.address.province}}</label><br/>
+                <div class="col-lg-12">
+                    <div class="rating">
+                        <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
+                    </div>
+                    <h6>Store ID: {{storeDetail.storeId}}</h6>
                 </div>
+                <div class="col-lg-12 row store_info_panel">
 
-                <div class="row store_detail" ng-if="!editMode">
-                    <label class="store_det_name">
-                        {{storeDetail.store.name}}</br> <button type="button" ng-click="toggleEdit()">EDIT</button>
-                        {{storeDetail.store.address.city}},{{storeDetail.store.address.province}}</label><br/>
-                    <div class="col-lg-12">
-                        <div class="rating">
-                            <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
-                        </div>
-                        <h6>Store ID: {{storeDetail.store.storeId}}</h6>
+                    <div class="col-lg-5 crop">
+                        <img ng-src="{{storeDetail.photo}}">
                     </div>
-                    <div class="col-lg-12 row store_info_panel">
-                        
-                        <div class="col-lg-5 crop">
-                            <img ng-src="{{storeDetail.store.photo}}">
-                        </div>
-                        <div class="col-lg-4 map_area">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d92371.59313268925!2d-79.46299102735114!3d43.65623431891778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x882b34c63f9b87ed%3A0x100ad4ac9f066076!2sBaldwin+Naturals%2C+16+Baldwin+St%2C+Toronto%2C+ON+M5T+1L2!3m2!1d43.656255699999996!2d-79.3929512!5e0!3m2!1sen!2sca!4v1480190512318" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
-                            <p class="store_info_header"><i class="fa fa-map-marker" aria-hidden="true"></i> {{storeDetail.store.address.street}}, {{storeDetail.store.address.city}}, {{storeDetail.store.address.province}}, {{storeDetail.store.address.postalcode}}</p>
-                            <p class="store_info_header"><i class="fa fa-phone" aria-hidden="true"></i> (416) 979-1777</p>
-                        </div>
-                        <div class="col-lg-3 store_info">
-                            <p class="store_info_header">Hours: </p>
-
-                            <p>Mon: </p>
-                            <p>Tue: </p>
-                            <p>Wed: </p>
-                            <p>Thur: </p>
-                            <p>Fri: </p>
-                            <p>Sat: </p>
-                            <p>Sun: </p>
-                            <p class="store_info_header">More business info</p>
-                            <p>Accepted Cards: Credit, Debit</p>
-                            <p>Wheelchair Accessible: Yes</p>
-                        </div>
+                    <div class="col-lg-4 map_area">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d92371.59313268925!2d-79.46299102735114!3d43.65623431891778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x882b34c63f9b87ed%3A0x100ad4ac9f066076!2sBaldwin+Naturals%2C+16+Baldwin+St%2C+Toronto%2C+ON+M5T+1L2!3m2!1d43.656255699999996!2d-79.3929512!5e0!3m2!1sen!2sca!4v1480190512318" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+                        <p class="store_info_header"><i class="fa fa-map-marker" aria-hidden="true"></i> {{storeDetail.address.street}}, {{storeDetail.address.city}}, {{storeDetail.address.province}}, {{storeDetail.address.postalcode}}</p>
+                        <p class="store_info_header"><i class="fa fa-phone" aria-hidden="true"></i> (416) 979-1777</p>
                     </div>
+                    <div class="col-lg-3 store_info">
+                        <p class="store_info_header">Hours: </p>
 
-                    <div class="col-lg-12 row">
-                        <div class="col-lg-8 row store_products_panel">
-                            <label>Products</label><br/>
-                            <div ng-repeat="fruit in storeDetail.fruits">
-                                <div class="col-lg-3 product_thumb_link">
-                                    <span ui-sref="fruit-detail({fruitid: fruit._id})"><img ng-src="{{fruit.photo}}" alt=""></span>
-                                    <p>
-                                        <span class="leftcap">{{fruit.type}}</span>
-                                        <span class="rightcap">{{fruit.price}}</span>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 comments_panel">
-                            <div class="detailBox">
-                                <div class="titleBox">
-                                  <label>Comments</label>
-                                </div>
-                                <div class="actionBox">
-                                    <ul class="commentList" ng-repeat="comment in storeDetail.store.comments">
-                                        <li>
-                                            <div class="commenterImage">
-                                              <img src="http://placekitten.com/50/50" />
-                                            </div>
-                                            <div class="commenterText">
-                                                <p class="">{{comment.username}}</p>
-                                            </div>
-                                            <div class="commentText">
-                                                <p class="">{{comment.message}}</p> <span class="date sub-text">on {{comment.created}}</span>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                    <form class="form-inline" role="form">
-                                        <div class="form-group">
-                                            <input class="form-control" type="text" placeholder="Your comments" />
-                                        </div>
-                                        <div class="form-group">
-                                            <button class="btn btn-default">Add</button>
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
+                        <p>Mon: </p>
+                        <p>Tue: </p>
+                        <p>Wed: </p>
+                        <p>Thur: </p>
+                        <p>Fri: </p>
+                        <p>Sat: </p>
+                        <p>Sun: </p>
+                        <p class="store_info_header">More business info</p>
+                        <p>Accepted Cards: Credit, Debit</p>
+                        <p>Wheelchair Accessible: Yes</p>
                     </div>
                 </div>
 
+                <div class="col-lg-12 row">
+                    <div class="col-lg-8 row store_products_panel">
+                        <label>Products</label><br/>
+                        <div ng-repeat="fruit in storeDetail.fruits">
+                            <div class="col-lg-3 product_thumb_link">
+                                <span ui-sref="fruit-detail({fruitid: fruit._id})"><img ng-src="{{fruit.photo}}" alt=""></span>
+                                <p>
+                                    <span class="leftcap">{{fruit.type}}</span>
+                                    <span class="rightcap">${{fruit.price | number : 2}}</span>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 comments_panel">
+                        <div class="detailBox">
+                            <div class="titleBox">
+                                <label>Comments</label>
+                            </div>
+                            <div class="actionBox">
+                                <ul class="commentList" ng-repeat="comment in storeDetail.comments">
+                                    <li>
+                                        <div class="commenterImage">
+                                            <img ng-src="{{comment.user[0].photo}}" />
+                                        </div>
+                                        <div class="commenterText">
+                                            <p class="">{{comment.username}}</p>
+                                        </div>
+                                        <div class="commentText">
+                                            <p class="">{{comment.message}}</p> <span class="date sub-text">on {{comment.created}}</span>
+                                        </div>
+                                    </li>
+                                </ul>
+                                <form class="form-inline" role="form">
+                                    <div class="form-group">
+                                        <input class="form-control" type="text" placeholder="Your comments" />
+                                    </div>
+                                    <div class="form-group">
+                                        <button class="btn btn-default">Add</button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
         </div>
+
+    </div>
 
 </div>
