--- a/public/partials/stores.html
+++ b/public/partials/stores.html
@@ -61,7 +61,7 @@
 
                                 <tr ng-repeat="store in storesList track by $index">
                                     <td>{{$index+1}}</td>
-                                    <td ui-sref="store-detail({storeid: store.storeId})"><img ng-src="{{store.photo}}" alt=""></td>
+                                    <td class="store_page_thumb" ui-sref="store-detail({storeid: store.storeId})"><img ng-src="{{store.photo}}" alt=""></td>
                                     <td>{{store.name}}</td>
                                     <td>{{store.storeId}}</td>
                                     <td>{{store.address.street}}, {{store.address.city}}, {{store.address.province}}, {{store.address.postalcode}}</td>
