--- a/public/partials/store-detail.html
+++ b/public/partials/store-detail.html
@@ -97,10 +97,10 @@
                                 </ul>
                                 <form class="form-inline" role="form">
                                     <div class="form-group">
-                                        <input class="form-control" type="text" placeholder="Your comments" />
+                                        <input ng-model = "storeComment.message" class="form-control" type="text" placeholder="Your comments" />
                                     </div>
                                     <div class="form-group">
-                                        <button class="btn btn-default">Add</button>
+                                        <button ng-click="commentOnStore()" class="btn btn-default">Add</button>
                                     </div>
                                 </form>
                             </div>
