--- a/public/partials/product-detail.html
+++ b/public/partials/product-detail.html
@@ -68,10 +68,10 @@
                             </ul>
                             <form class="form-inline" role="form">
                                 <div class="form-group">
-                                    <input class="form-control" type="text" placeholder="Your comments"/>
+                                    <input ng-model = "fruitComment.message" class="form-control" type="text" placeholder="Your comments"/>
                                 </div>
                                 <div class="form-group">
-                                    <button class="btn btn-default">Add</button>
+                                    <button ng-click="commentOnFruit()" class="btn btn-default">Add</button>
                                 </div>
                             </form>
                         </div>
