--- a/public/partials/products.html
+++ b/public/partials/products.html
@@ -35,6 +35,13 @@
                     </div>
                 </div>
 
+                <div class="season col-lg-9 col-md-6">
+                     <button ng-click="getFruitsForSeason('fall')" class="seasonname">Fall</button >
+                     <button ng-click="getFruitsForSeason('winter')" class="seasonname">Winter</button>
+                     <button ng-click="getFruitsForSeason('spring')" class="seasonname">Spring</button >
+                     <button ng-click="getFruitsForSeason('summer')" class="seasonname">Summer</button>
+                </div>
+
             </div>
             <!-- /.row -->
 
@@ -61,7 +68,7 @@
                                 <tbody>
                                 <tr ng-repeat="fruit in fruitsList track by $index">
                                     <td>{{$index+1}}</td>
-                                    <td ui-sref="fruit-detail({fruitid: fruit._id})"><img ng-src="{{fruit.photo}}" alt=""></td>
+                                    <td class="product_page_thumb" ui-sref="fruit-detail({fruitid: fruit._id})"><img ng-src="{{fruit.photo}}" alt=""></td>
                                     <td>{{fruit.type}}</td>
                                     <td>${{fruit.price | number : 2}}</td>
                                     <td>{{fruit.quantity}}</td>
