--- a/public/partials/product-detail.html
+++ b/public/partials/product-detail.html
@@ -37,8 +37,8 @@
                     Size: {{fruitDetail.unit}}
                     <br/>
                     <br/>
-                    Qty: <input type="number" name="quantity" ng-model="" min="1" max="20">
-                    <a href="#" class="add-to-cart">Add to Cart</a>
+                    Qty: <input type="number" ng-model="selectedProduct.quantity" name="quantity" ng-model="" min="1" max="20">
+                    <a href="#" ng-click="addToCart()" class="add-to-cart">Add to Cart</a>
                 </div>
             </div>
 
