--- a/public/partials/orders.html
+++ b/public/partials/orders.html
@@ -49,6 +49,7 @@
                                 <thead>
                                     <tr>
                                         <th>No.</th>
+                                        <th>Username</th>
                                         <th>Items</th>
                                         <th>Total</th>
                                         <th>Dated Created</th>
@@ -56,8 +57,9 @@
                                 </thead>
                                 <tbody>
                                     <tr ng-repeat="order in ordersList track by $index">
-                                        <td>{{$index+1}}</td>                                     
-                                        <td>{{order.items}}</td>
+                                        <td>{{$index+1}}</td>
+                                        <td>{{order.username}}</td>
+                                        <td>{{order.items.length}}</td>
                                         <td>{{order.total}}</td>
                                         <td>{{order.createdAt}}</td>
                                     </tr>
