fixed seasons error, changed font for site title

--- a/public/assets/css/ripe.css
+++ b/public/assets/css/ripe.css
@@ -9,8 +9,10 @@ body {
     }
 }
 
-title{
+.sitetitle{
     font-family: 'Lobster', cursive;
+    font-weight: 4em;
+    font-size: 30px;
 }
 
 #wrapper {
