--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -1,7 +1,7 @@
 <header>
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="navbar-header">
-                <a class="navbar-brand" href="index.html" style="font-weight: 800;font-size: 30px;">RIPe Fruit</a>
+                <a class="navbar-brand sitetitle" href="index.html">RIPe Fruit</a>
             </div>
 
             <a style="color:white;color: white;padding-top: 12px;margin-right: 12px;" class="pull-right" ui-sref="account"><i class="fa fa-user"></i> Account</a>
