--- a/public/partials/products.html
+++ b/public/partials/products.html
@@ -36,10 +36,10 @@
                 </div>
 
                 <div class="season col-lg-9 col-md-6">
-                     <button ui-sref="seasons" ng-click="getFruitsForSeason('fall')" class="seasonname">Fall</button >
-                     <button ui-sref="seasons" ng-click="getFruitsForSeason('winter')" class="seasonname">Winter</button>
-                     <button ui-sref="seasons" ng-click="getFruitsForSeason('spring')" class="seasonname">Spring</button >
-                     <button ui-sref="seasons" ng-click="getFruitsForSeason('summer')" class="seasonname">Summer</button>
+                     <button ng-click="getFruitsForSeason('fall')" class="seasonname">Fall</button >
+                     <button ng-click="getFruitsForSeason('winter')" class="seasonname">Winter</button>
+                     <button ng-click="getFruitsForSeason('spring')" class="seasonname">Spring</button >
+                     <button ng-click="getFruitsForSeason('summer')" class="seasonname">Summer</button>
                 </div>
 
             </div>
