remove status from response

--- a/public/partials/product-detail.html
+++ b/public/partials/product-detail.html
@@ -37,7 +37,7 @@
                     Size: {{fruitDetail.unit}}
                     <br/>
                     <br/>
-                    Qty: <input type="number" ng-model="selectedProduct.quantity" name="quantity" ng-model="" min="1" max="20">
+                    Qty: <input type="number" ng-model="selectedProduct.quantity" name="quantity">
                     <a href="#" ng-click="addToCart()" class="add-to-cart">Add to Cart</a>
                 </div>
             </div>
