--- a/public/partials/account.html
+++ b/public/partials/account.html
@@ -90,7 +90,7 @@
                                         <tr>
                                             <tr>
                                                 <td>Address</td>
-                                                <td>{{userInfo.street}}, {{userInfo.city}} {{userInfo.province}} {{userInfo.postalcode}}</td>
+                                                <td>{{userInfo.address.street}}, {{userInfo.address.city}} {{userInfo.address.province}} {{userInfo.address.postalcode}}</td>
                                             </tr>
                                             <tr>
                                                 <td>Email</td>
