--- a/public/partials/store-detail.html
+++ b/public/partials/store-detail.html
@@ -97,7 +97,7 @@
 
                 <div class="col-lg-12 row">
                     <div class="col-lg-8 row store_products_panel">
-                        <label>Products</label><a data-original-title="Add" data-toggle="tooltip" type="button" class="btn-lg" ng-click="toggleAdd()">Add Product</a><br/>
+                        <label>Products</label><a ng-if="isAdmin" data-original-title="Add" data-toggle="tooltip" type="button" class="btn-lg" ng-click="toggleAdd()">Add Product</a><br/>
                         <div ng-repeat="fruit in storeDetail.fruits">
                             <div class="col-lg-3 product_thumb_link">
                                 <span ui-sref="fruit-detail({fruitid: fruit._id})"><img ng-src="{{fruit.photo}}" alt=""></span>
