--- a/public/partials/stores.html
+++ b/public/partials/stores.html
@@ -76,7 +76,7 @@
                 </div>
 
 
-                <a data-original-title="Add" data-toggle="tooltip" type="button" class="btn-lg" ng-click="toggleAdd()">Add Store</a>
+                <a ng-if="isAdmin" data-original-title="Add" data-toggle="tooltip" type="button" class="btn-lg" ng-click="toggleAdd()">Add Store</a>
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="panel panel-red">
